I forgot to update for awhile! :-/ the app is done

--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,4 +1,4 @@
 
 <li>
-  {{answer.answerContent}} - answered by {{answer.author}}
+  {{answer.answerContent}} - answered by {{answer.authorQuestion}}
 </li>
