--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,1 +1,6 @@
-{{outlet}}
+<h1>Welcome to {{model.questionContent}}</h1>
+
+{{new-answer save2="save3" question=model}}
+
+{{question-tile question=model destroyQuestion="destroyQuestion"}}
+{{update-question question=model update="update"}}
