--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,5 +1,5 @@
 <h3>{{question.questionContent}} - asked by {{question.authorQuestion}}</h3>
-
+<h4>Notes: {{question.notes}}</h4>
 <ul>
   {{#each question.answers as |answer|}}
     {{answer-tile answer=answer}}
