Fixed a small problem where I named the answer author the wrong variable name and it wasn't showing up

--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,4 +1,4 @@
 
 <li>
-  {{answer.answerContent}} - answered by {{answer.authorQuestion}}
+  {{answer.answerContent}} - answered by {{answer.authorAnswer}}
 </li>
