--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,10 +1,12 @@
 <div class="container">
   <header class="jumbotron">
-    <h1>Q and A</h1>
+    <h2>Q and A   -   <span id="home-link">{{#link-to 'index'}}Home Page{{/link-to}}</span></h2>
+
+<hr>
   </header>
     {{outlet}}
   <hr>
   <footer>
-    {{#link-to 'index'}}Home Page{{/link-to}}
+
   </footer>
 </div>
