Create a upvote button for answers, and ther functionality behind it

--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,4 +1,4 @@
 
 <li>
-  {{answer.answerContent}} - answered by {{answer.authorAnswer}}
+  {{answer.answerContent}} - answered by {{answer.authorAnswer}}  | <button {{action 'upvoteAnswer' answer}}>Upvote</button>
 </li>
