Created the ability to delete answers, and fixed the upvote capabilities

--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,7 +1,8 @@
 
-<li>
-  {{#if voteNumber}}
-  <span class="bold">{{answer.votes}}</span>
-  {{/if}}
-  - {{answer.answerContent}} - answered by {{answer.authorAnswer}}  | <button {{action 'upvoteAnswer' answer}}>Upvote</button>
-</li>
+
+
+  {{answer.answerContent}} - answered by {{answer.authorAnswer}} |  {{#if voteNumber}}
+    <span class="bold">{{answer.votes}} votes</span>
+    {{/if}}
+
+  <button {{action 'deleteAnswer' answer}}class="delete-button"> Delete Answer</button> | <button {{action 'upvoteAnswer' answer}}>Upvote</button>
