--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -2,5 +2,5 @@
 
 {{new-answer save2="save3" question=model}}
 
-{{question-tile question=model destroyQuestion="destroyQuestion"}}
+{{question-tile question=model destroyQuestion="destroyQuestion" destroyAnswer="destroyAnswer" updateAnswer="updateAnswer"}}
 {{update-question question=model update="update"}}
