Create the rest of the service functionality, inculding  the favorites route

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <header class="jumbotron">
-    <h2>Q and A   -   <span id="home-link">{{#link-to 'index'}}Home Page{{/link-to}}</span></h2>
+    <h2>Q and A   -   <span id="home-link">{{#link-to 'index'}}Home Page{{/link-to}}  {{#link-to 'display-favorites'}} Favorites{{/link-to}}</span></h2>
 
 <hr>
   </header>
